<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="view">View details</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="poiicon">poi icon</string>
    <string name="app_name">Health GIS</string>
    <string name="settlementHeadName">Settlement head name</string>
    <string name="settlementHeadPhone">Settlement head phone</string>
    <string name="settlement">Settlement</string>
    <string name="settlementName">Settlement name</string>
    <string name="settlementOtherName">Other name</string>
    <string name="settlementPopulation">Target population</string>
    <string name="state">State</string>
    <string name="stateCode">State code</string>
    <string name="lga">LGA</string>
    <string name="lgaCode">LGA code</string>
    <string name="settement">Settlement Name</string>
    <string name="poi">Point of interest</string>
    <string name="wname">Ward name</string>
    <string name="ward">Ward</string>
    <string name="wcode">Ward code</string>
    <string name="poi_name">Name</string>
    <string name="poi_type">Type</string>
    <string name="lati">Latitude</string>
    <string name="longi">Longitude</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="type">Type</string>
    <string name="risk">Risk</string>
    <string name="hardToReach">Hard to reach</string>
    <string name="resoneForFardToReach">Resone for hard to reach</string>
    <string name="location">Location</string>
    <string name="getLocation">Get location</string>
    <string name="continu">Continue</string>
    <string name="same_as_before">Same as before</string>
    <string name="stopLocationSearch">Stop location search</string>
    <string name="initState">Initializing...</string>
    <string name="wHead">Ward Head</string>
    <string name="vHeadHouse">Village Head House</string>
    <string name="mosque">Mosque</string>
    <string name="school">School</string>
    <string name="charch">Charch</string>
    <string name="healthFacilities">Health Facilities</string>
    <string name="markatePlace">Market Place</string>
    <string name="waterPoint">Water Point</string>
    <string name="motorPark">Motor Park</string>
    <string name="dHeadHouse">District Head House</string>
    <string name="cityPoint">City Point</string>
    <string name="roadSetrat">Road/Street</string>
    <string name="railCrossing">Rail Crossing</string>
    <string name="playGround">Play Ground</string>
    <string name="stadium">Stadium</string>
    <string name="majorBuildings">Mejor Buildings</string>
    <string name="street">Street</string>
    <string name="tvRedioStation">Tv/Redio station</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="suparMarket">Supar market</string>
    <string name="shops">Shops</string>
    <string name="restaurant">Restaurant</string>
    <string name="others">Others</string>
    <string name="phss_school">Choose a school type</string>
    <string name="phss_health">Choose a health facility type</string>
    <string name="phss_buildings">Choose a builing type</string>
    <string name="phss_waterpoint">Choose a water point type</string>
</resources>
