<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-2">
    <RelativeLayout android:padding="5dp" android:layout_width="-1" android:layout_height="-2">
        <TextView android:id="@id/textView101" android:layout_width="-2" android:layout_height="-2" android:text="Total number of Settlement saved:" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <ScrollView android:id="@id/ScrollView02" android:layout_width="-1" android:layout_height="-1">
        <LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-2">
            <RelativeLayout android:padding="10px" android:layout_width="-1" android:layout_height="-2" />
            <RelativeLayout android:padding="10px" android:layout_width="-1" android:layout_height="-2">
                <TextView android:id="@id/textView4" android:layout_width="-2" android:layout_height="-2" android:text="@string/poi_name" android:width="250dp" android:layout_alignParentLeft="true" />
                <EditText android:id="@id/editTextPoiName" android:layout_width="-2" android:layout_height="-2" android:width="250dp" android:capitalize="3" android:layout_below="@id/textView4" />
                <TextView android:id="@id/textView5" android:layout_width="-2" android:layout_height="-2" android:text="@string/poi_type" android:layout_toRightOf="@id/textView4" android:layout_above="@id/editTextPoiType" />
                <EditText android:enabled="false" android:id="@id/editTextPoiType" android:layout_width="-2" android:layout_height="-2" android:width="100dp" android:layout_toRightOf="@id/editTextPoiName" android:layout_below="@id/textView4" />
            </RelativeLayout>
            <RelativeLayout android:padding="10px" android:layout_width="-1" android:layout_height="-2">
                <TextView android:id="@id/textView6" android:layout_width="-2" android:layout_height="-2" android:text="@string/lati" android:width="150dp" android:layout_alignParentLeft="true" />
                <EditText android:enabled="false" android:id="@id/editTextLatitute" android:layout_width="-2" android:layout_height="-2" android:width="150dp" android:layout_below="@id/textView6" />
                <TextView android:id="@id/textView7" android:layout_width="-2" android:layout_height="-2" android:text="@string/longi" android:layout_toRightOf="@id/textView6" android:layout_above="@id/editTextLongitute" />
                <EditText android:enabled="false" android:id="@id/editTextLongitute" android:layout_width="-2" android:layout_height="-2" android:width="200dp" android:layout_toRightOf="@id/editTextLatitute" android:layout_below="@id/textView6" />
            </RelativeLayout>
            <RelativeLayout android:padding="10px" android:layout_width="-1" android:layout_height="-2">
                <Button android:id="@id/buttonSave" android:layout_width="-2" android:layout_height="-2" android:text="@string/save" android:width="150dp" android:layout_alignParentLeft="true" />
                <Button android:id="@id/buttonLocation" android:layout_width="-2" android:layout_height="-2" android:text="@string/getLocation" android:width="150dp" android:layout_toRightOf="@id/buttonSave" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
